switching to rails_config gem

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 .env.production
 
 /config/database.yml
+
+/config/settings/development.yml
+/config/settings/test.yml
+/config/settings/production.yml
