setup staging as staging

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,4 @@
 
 /config/database.yml
 
-/config/settings/development.yml
-/config/settings/test.yml
-/config/settings/production.yml
+/config/settings/*
