use 1 puma on small instance

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ dump.rdb
 /config/settings/development.yml
 /config/settings/production.yml
 /config/settings/staging.yml
+
+public/bower_components
