--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,11 @@ redis:
     - siorb-postgres:/var/lib/postgresql/data
 web:
   build: .
-  command: bundle exec puma -p 3000
+  command: bundle exec puma -e production -p 3000
   volumes:
     - .:/app
   ports:
-    - "80:3000"
+    - "80:80"
   links:
     - db
     - redis
