--- a/nginx-sites.conf
+++ b/nginx-sites.conf
@@ -1,3 +1,7 @@
+upstream myapp {
+  server 127.0.0.1:3000;
+}
+
 server {
   listen 80;
 
@@ -16,6 +20,11 @@ server {
   }
 
   location / {
-      proxy_pass http://localhost:3000/;
+    proxy_redirect  off;
+    try_files $uri $uri/index.html $uri.html @ruby;
+  }
+
+  location @ruby {
+    proxy_pass http://myapp;
   }
 }
