--- a/nginx-sites.conf
+++ b/nginx-sites.conf
@@ -7,6 +7,7 @@ server {
 
   root /app/public;
   location ~ ^/(assets|images|javascripts|stylesheets|swfs|system)/ {
+    max_ranges 0;
     gzip_static on;
     expires max;
     add_header Cache-Control public;
